...
                  borderRadius: BorderRadius.circular(10),
                ),
                child: Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    CustomText(
                      text: 'View Cart',
                      color: AppColors.primaryColor,
                      fontSize: AppFontSize.verySmall,
                      fontWeight: FontWeight.bold,
                    ),
                    const SizedBox(width: 4),
                    SvgIcon(
...
